Spacing fixes and z-index issu for country dropdown strip

--- a/front-end/Assets/src/css/pages/_careers.scss
+++ b/front-end/Assets/src/css/pages/_careers.scss
@@ -89,9 +89,9 @@
 				.card-content {
 						
 						@media(min-width: $break-lg){
-							padding: 30px 0px;
+							padding: 0px 0px;
 						}
-						padding: 30px;
+						padding: 15px 0;
 						h4{
 							font-weight: 400;
 							font-size: 16px;
@@ -135,7 +135,7 @@
 						margin-bottom: 35px;
 						@media(min-width: $break-md){
 							margin-top: 48px;
-							margin-bottom: 96px;
+							margin-bottom: 78px;
 						}
 				}
 				
@@ -143,6 +143,7 @@
 		
 			.product-category-header{
 				overflow: initial;
+				z-index: 10;
 				.inner{
 					.bannerContent{
 						.layout-inner-wrap{
@@ -890,7 +891,7 @@
 				display: inline-block;
 				height: 72%;
 				position: absolute;
-				right: 0;
+				right: -2px;
 				top: 15%;
 				width: 1px;
 			}
@@ -1086,7 +1087,7 @@
 			
 			@media (min-width: $break-md) {
 				padding: 96px 0;
-				margin: 56px 0 86px 0;	
+				margin: 20px 0 86px 0;	
 			}
 			h3,h4{ font-weight: 400; color: #fff; }
 			h3{
@@ -1133,7 +1134,7 @@
 		.masonry {
 				padding-bottom: 20px;
 				@media (min-width: $break-sm) {
-					padding-bottom: 20px;
+					padding-bottom: 86px;
 				}
 		}
 	} 
@@ -1168,7 +1169,7 @@
 	}
 	
 	#careers_locations_owl {
-		padding-bottom: 120px;
+		padding-bottom: 150px;
 		.owl-carousel {
 			z-index: 1;
 		}
